价格数据库两个版本

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -95,7 +95,7 @@
 /* TODO:管理平台全局样式，如果要修改字体在这里修改 */
 body {
   // 全局字体
-  font-family: "SimSun", sans-serif;
+  font-family: "Microsoft YaHei", sans-serif;
   // 鼠标的样式  修改图标
   // cursor: url("../assets/mouse/index.cur"), auto;
   word-break: break-word;
